[metadata]
name = gods_eye
version = 1.0.0
author = Pavel Dat
author_email = dats.pavel1999@gmail.com
description = A set of tools which should be used in Gods Eye
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/paveldat/God-s-eye

[options]
package_dir =
    =src
packages =
    clickjacking
    dns_lookup
    exec_shell_command
    http_headers_grabber
    ip
    logger
    nmap_scanner
    robots_scanner
    whois_lookup

[options.packages.find]
where = src
include = clickjacking, dns_lookup, exec_shell_command, http_headers_grabber,
    ip, logger, nmap_scanner, robots_scanner, whois_lookup