[metadata]
name = gods_eye
version = 1.0.5
author = Pavel Dat
author_email = dats.pavel1999@gmail.com
description = A set of tools which should be used in Gods Eye
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/paveldat/God-s-eye

[options]
package_dir =
    =src
packages =
    clickjacking
    dns_lookup
    exec_shell_command
    http_headers_grabber
    ip
    logger
    nmap_scanner
    robots_scanner
    whois_lookup
    ip_info_finder
    pwned
    phone_info
install_requires =
    requests >= 2.25.1
    dnspython >= 2.2.1
    python-nmap >= 0.7.1
    folium >= 0.14.0
    opencage >= 2.1.0
    phonenumbers >= 8.13.2

[options.packages.find]
where = src
include = clickjacking, dns_lookup, exec_shell_command, http_headers_grabber,
    ip, logger, nmap_scanner, robots_scanner, whois_lookup, ip_info_finder,
    pwned, phone_info
